--- a/Agents/KingsLynnAgent/docker-compose.yml
+++ b/Agents/KingsLynnAgent/docker-compose.yml
@@ -1,4 +1,7 @@
-  # This file is provided in order to upload an image to the github Docker registry
+# This file is provided in order to upload an image to the github Docker registry
+version: "3.8"
+
+services:
   building-data-getter:
     image: ghcr.io/cambridge-cares/building-data-getter:1.0.0
     build:
