dev-website: Added credo-vis to web stack (must be built externally) and configured nginx to require login to view it.

--- a/Deploy/stacks/web/docker-compose.deploy.live.yml
+++ b/Deploy/stacks/web/docker-compose.deploy.live.yml
@@ -38,3 +38,8 @@ services:
   uk-power-system:
     ports:
       - 40083:80
+      
+  # CReDo visualisation
+  credo-vis:
+    ports:
+      - 40086:80
