--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
@@ -250,6 +250,22 @@ location /rdf4j-workbench/ {
 }
 
 
+#======================== Redirects requiring authentication =========================
+location /credo/visualisation {
+	return 302 /credo/visualisation/;
+}
+location /credo/visualisation/ {
+	auth_basic				"CReDo Visualisation";
+	auth_basic_user_file	/etc/apache2/.htpasswd; 
+	
+	proxy_pass       		http://local_credo-vis/;
+    proxy_set_header  		Host $http_host;
+    proxy_set_header  		X-Real-IP $remote_addr;
+    proxy_set_header  		X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header 		X-Forwarded-Host $http_host;
+    proxy_set_header 		X-Forwarded-Server $http_host;
+}
+
 
 #======================== Redirects for other stuff (only for developers) =========================
 # Folder containing CSVs on visitor stats
