--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.common.conf
@@ -18,3 +18,7 @@ upstream local_flood_map {
 upstream local_website_http {
     server website:80;
 }
+
+upstream local_credo-vis {
+    server credo-vis:80;
+}
