--- a/Deploy/stacks/web/docker-compose.deploy.yml
+++ b/Deploy/stacks/web/docker-compose.deploy.yml
@@ -76,13 +76,14 @@ services:
   # CReDo visualisation
   credo-vis:
     image: docker.cmclinnovations.com/credo-vis:1.0.0-SNAPSHOT
-    container_name: "credo-vis"
+    container_name: "credo-vis{CONTAINER_NAME_SUFFIX}"
     pull_policy: if_not_present
     restart: unless-stopped
     security_opt:
       - label=disable
     volumes:
       - vis_data:/var/www/html/data
+      - vis_docs:/var/www/html/docs
   
 
 # The default network name is set using a docker-compose environment variable.
@@ -93,3 +94,4 @@ networks:
     
 volumes:
   vis_data: null
+  vis_docs: null
