dev-river-sensor-env-var: changed entrypoint for write-only target to use the java command directly

--- a/Agents/FloodAgent/Dockerfile
+++ b/Agents/FloodAgent/Dockerfile
@@ -27,7 +27,6 @@ WORKDIR /app
 COPY --from=builder /root/FloodAgent/target/*.jar /app
 # Copy the downloaded dependencies from the builder
 COPY --from=builder /root/FloodAgent/target/lib /app/lib
-RUN apk update && apk add dos2unix bash
 
 #==================================================================================================
 
@@ -38,7 +37,7 @@ RUN apk update && apk add dos2unix bash
 FROM agent as default
 # Copy in start up script
 # Install web server (to host json files for download)
-RUN apk add apache2
+RUN apk update && apk add apache2 dos2unix bash
 COPY ./httpd.conf /etc/apache2/httpd.conf
 RUN mkdir -p /var/www/html/
 RUN chown -R apache:apache /var/www/
@@ -57,12 +56,8 @@ ENTRYPOINT bash /app/start-up.sh
 # docker build --target write-only -t [TAGNAME] .
 #==================================================================================================
 FROM agent as write-only
-# Copy in start up script
-COPY ./start-up-writer-only.sh /app/start-up-writer-only.sh
-RUN dos2unix /app/start-up-writer-only.sh
-RUN chmod -R 775 /app/start-up-writer-only.sh
-
+WORKDIR /app
 # Run the jar to start the agent
-ENTRYPOINT bash /app/start-up-writer-only.sh
+ENTRYPOINT java -cp FloodAgent-1.0.0-SNAPSHOT.jar uk.ac.cam.cares.jps.agent.flood.LaunchWriterOnly
 
 #==================================================================================================
