--- a/AsynchronousWatcherService/pom.xml
+++ b/AsynchronousWatcherService/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>uk.ac.cam.cares.jps.aws</groupId>
-    <artifactId>JPS_AWS</artifactId>
+    <artifactId>jps-aws</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
     <properties>
@@ -12,6 +12,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <tomcat.version>8.5.47</tomcat.version>
     </properties>
+    <!-- Repository locations to deploy to -->
+    <distributionManagement>
+        <repository>
+            <id>repo</id>
+            <name>TheWorldAvatar Maven Repository</name>
+            <url>https://maven.pkg.github.com/cambridge-cares/TheWorldAvatar/</url>
+        </repository>
+    </distributionManagement>
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
