133-dev-design-of-experiment: modified docker related files following the modification of DoE Agent output; updated README file.

--- a/Agents/DoEAgent/Dockerfile
+++ b/Agents/DoEAgent/Dockerfile
@@ -37,7 +37,7 @@ RUN python -m pip install -r requirements.txt
 
 # Set the default working directory, then copy the Python source code into it
 WORKDIR /app
-ADD src /app/src
+ADD doeagent /app/doeagent
 
 # Switch to a non-root user before running the server, for security reasons
 # (See https://code.visualstudio.com/docs/containers/python-user-rights)
@@ -51,4 +51,4 @@ RUN chmod -R 755 /home/appuser
 # Start the gunicorn server on port 5000, using a Flask object called 'app' imported from the 'python_agent' module
 # Note that port 5000 is *inside the container*; this can be mapped to a port on the host when running the container on the command line or in docker-compose.yml
 USER appuser
-ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "src:create_app()"]
+ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "doeagent:create_app()"]
