--- a/Agents/DoEAgent/requirements.txt
+++ b/Agents/DoEAgent/requirements.txt
@@ -1,5 +1,6 @@
 pyasyncagent==0.0.5
 git+https://github.com/cambridge-cares/TheWorldAvatar@develop#subdirectory=Agents/utils/python-utils
+git+https://github.com/cambridge-cares/TheWorldAvatar@134-dev-lab-equipment-digital-twin#subdirectory=Agents/utils/chemistry-and-robots
 summit
 pandas
 pydantic
