dev-114-BMRS-EIC-DUKES: Added GPS checker functionality.

--- a/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/resources/ukpowergeneration.properties
+++ b/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/resources/ukpowergeneration.properties
@@ -2,7 +2,7 @@
 
 # Output directory for JSON files containing retrieved data
 # In deployment under Docker, this should be /var/www/html/ukpowergeneration
-output.directory = ./output_data
+output.directory = ./
 
 ###--- Properties for Digital Twin Visualisation Framework ---###
 
