--- a/JPS_ACCESS_AGENT/access-agent/pom.xml
+++ b/JPS_ACCESS_AGENT/access-agent/pom.xml
@@ -81,7 +81,7 @@
   	<dependency>
     	<groupId>uk.ac.cam.cares.jps</groupId>
     	<artifactId>jps-base-lib</artifactId>
-    	<version>1.6.0-SNAPSHOT</version>
+    	<version>1.6.0-SNAPSHOT-ACCESS-AGENT</version>
     </dependency>
     
     <!-- Java servlet API -->
