dev-114-BMRS-EIC-DUKES: Visualisation update.

--- a/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/docker/Dockerfile
+++ b/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/docker/Dockerfile
@@ -1,9 +1,11 @@
 #########################
 #
-# This docker file builds an image for the UK Power Grid Agent visualistion.
+# This docker file builds an image for the Example Digital Twin visualistion.
+# It can also be used as starting point for any custom DT visualisations that
+# are created in future.
 #
 # NOTE: The "docker build" command used to build this file into an Image should
-# be run from the "ukpowergeneration" folder, not from within this "docker" directory.
+# be run from the "example-dt-vis" folder, not from within this "docker" directory.
 # See the README for more details.
 # 
 # Stages:
@@ -20,7 +22,7 @@ FROM  alpine:3.14.0 as dev
 # Meta data
 LABEL authors = "support@cmclinnovations.com"
 LABEL version = "1.0.0-SNAPSHOT"
-LABEL description = "UK Power Grid Agent"
+LABEL description = "Example Digital Twin"
 
 # Install utilities
 RUN apk update && apk add procps nano wget bash busybox-initscripts dos2unix
