--- a/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/docker/docker-compose.yml
+++ b/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/docker/docker-compose.yml
@@ -3,20 +3,17 @@ version: "3.8"
 # All Services
 services:
 
-  # UK Power Grid Agent Visualisation
-  power-grid-visualisation:
-    image: docker.cmclinnovations.com/power-grid-visualisation:1.0.0-SNAPSHOT
-    container_name: power-grid-visualisation
+  # Example DT Visualisation
+  example-dt-vis:
+    image: docker.cmclinnovations.com/example-dtvf:1.0.0-SNAPSHOT
+    container_name: example-dtvf
     build:
       context: "../"
       dockerfile: "./docker/Dockerfile"
       target: "dev"
       labels:
         authors: "support@cmclinnovations"
-        description: "UK Power Grid Agent."
-    # Mounts local directory to a destination directory on docker.
-    volumes:
-    - ../:/var/www/html
+        description: "Example implementation of the Digital Twin Visualisation Framework."
     ports:
       - "65080:80"
  
