--- a/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/docker/docker-compose.yml
+++ b/UK_Power_Generation_Units_BMRS/Python/Code/ukpowergeneration/visualisation/docker/docker-compose.yml
@@ -3,17 +3,19 @@ version: "3.8"
 # All Services
 services:
 
-  # Example DT Visualisation
-  example-dt-vis:
-    image: docker.cmclinnovations.com/example-dtvf:1.0.0-SNAPSHOT
-    container_name: example-dtvf
+  # UK Power Grid Agent Visualisation
+  power-grid-visualisation:
+    image: docker.cmclinnovations.com/power-grid-visualisation:1.0.0-SNAPSHOT
+    container_name: power-grid-visualisation
     build:
       context: "../"
       dockerfile: "./docker/Dockerfile"
       target: "dev"
       labels:
         authors: "support@cmclinnovations"
-        description: "Example implementation of the Digital Twin Visualisation Framework."
+        description: "UK Power Grid Agent."
+    # Mounts local directory to a destination directory on docker.
+    volumes:
+    - ../:/var/www/html
     ports:
-      - "65080:80"
- 
+      - "65082:80"
