dev-credo-geoserver: Updated the reverse-proxy so that it proxies for the CReDo GeoServer, rather than relying on the proxying specified in the "credo-vis" container.

--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
@@ -112,7 +112,7 @@ location /digital-twin/gas-grid-agent/ {
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Host $server_name;
     proxy_set_header  X-Forwarded-Proto $scheme;
-	
+    
 }
 
 
@@ -125,7 +125,7 @@ location /digital-twin/flood-agent/ {
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Host $server_name;
     proxy_set_header  X-Forwarded-Proto $scheme;
-	
+    
 }
 
 #==================== Redirects for the Crop Map (part of the UK Digital Twin) ====================
@@ -252,18 +252,42 @@ location /rdf4j-workbench/ {
 
 #======================== Redirects requiring authentication =========================
 location /credo/visualisation {
-	return 302 /credo/visualisation/;
+    return 302 /credo/visualisation/;
 }
 location /credo/visualisation/ {
-	auth_basic				"CReDo Visualisation";
-	auth_basic_user_file	/etc/apache2/.htpasswd; 
-	
-	proxy_pass       		http://local_credo-vis/;
-    proxy_set_header  		Host $http_host;
-    proxy_set_header  		X-Real-IP $remote_addr;
-    proxy_set_header  		X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header 		X-Forwarded-Host $http_host;
-    proxy_set_header 		X-Forwarded-Server $http_host;
+    auth_basic                  "CReDo Visualisation";
+    auth_basic_user_file        /etc/apache2/.htpasswd;
+
+    proxy_pass                  http://local_credo-vis/;
+    proxy_set_header            Host $http_host;
+    proxy_set_header            X-Real-IP $remote_addr;
+    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header            X-Forwarded-Host $http_host;
+    proxy_set_header            X-Forwarded-Server $http_host;
+}
+
+location /geoserver/web {
+    return 403;
+}
+location /geoserver/web/ {
+    return 403;
+}
+location /geoserver/rest {
+    return 403;
+}
+location /geoserver/rest/ {
+    return 403;
+}
+location /geoserver {
+    return 302 /geoserver/;
+}
+location /geoserver/ {
+    proxy_pass          http://local_credo-geoserver/geoserver/;
+    proxy_set_header    Host $http_host;
+    proxy_set_header    X-Real-IP $remote_addr;
+    proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header    X-Forwarded-Host $http_host;
+    proxy_set_header    X-Forwarded-Server $http_host;
 }
 
 
