--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.common.conf
@@ -22,3 +22,7 @@ upstream local_website_http {
 upstream local_credo-vis {
     server credo-vis:80;
 }
+
+upstream local_credo-geoserver {
+    server credo-geoserver:8080;
+}
