--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
@@ -266,20 +266,8 @@ location /credo/visualisation/ {
     proxy_set_header            X-Forwarded-Server $http_host;
 }
 
-location /geoserver/web {
-    return 403;
-}
-location /geoserver/web/ {
-    return 403;
-}
-location /geoserver/rest {
-    return 403;
-}
-location /geoserver/rest/ {
-    return 403;
-}
-location /geoserver {
-    return 302 /geoserver/;
+location = /geoserver {
+    return 302 $scheme://$http_host$uri/;
 }
 location /geoserver/ {
     proxy_pass          http://local_credo-geoserver/geoserver/;
@@ -288,6 +276,17 @@ location /geoserver/ {
     proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header    X-Forwarded-Host $http_host;
     proxy_set_header    X-Forwarded-Server $http_host;
+}
+
+# Prevent clients from accessing the web or REST interfaces for GeoServer
+location /geoserver/web/ {
+    return 301 $scheme://$http_host/;
+}
+location /geoserver/rest {
+    return 301 $scheme://$http_host/;
+}
+location /geoserver/rest/ {
+    return 301 $scheme://$http_host/;
 }
 
 
