--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
@@ -1,4 +1,4 @@
-# N.B. The "return 302 $scheme://$http_host$uri/;" redirects append slashes so that the 
+# N.B. The "return 301 $scheme://$http_host$uri/;" redirects append slashes so that the 
 # corresponding proxy_pass statements work as intended. They overrule nginx's default redirect,
 # which performs the same function, but doesn't preserve the port number of the original request.
 #
@@ -21,7 +21,7 @@ location / {
 #============================== Redirects for the Chemistry Chatbot ===============================
 # Main entry point for requests
 location = /marie/request {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 location /marie/request/ {
@@ -39,7 +39,7 @@ location /marie/request/ {
 
 # LDF server
 location = /marie/ldf {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 location /marie/ldf/ {
@@ -57,7 +57,7 @@ location /marie/ldf/ {
 
 #========== Redirects for the UK Power Plant visualisation (part of the UK Digital Twin) ==========
 location = /digital-twin/power {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 # Main entry point for visualisation
@@ -73,7 +73,7 @@ location /digital-twin/power/ {
 
 #=========== Redirects for the UK Gas Grid visualisation (part of the UK Digital Twin) ============
 location = /digital-twin/gas {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 # Main entry point for visualisation
@@ -88,7 +88,7 @@ location /digital-twin/gas/ {
 
 # Resource files for visualisation
 location = /geoJSON_assets {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 location /geoJSON_assets/ {
@@ -102,7 +102,7 @@ location /geoJSON_assets/ {
 
 # Location of the agent's hosted files
 location = /digital-twin/gas-grid-agent {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 location /digital-twin/gas-grid-agent/ {
@@ -130,7 +130,7 @@ location /digital-twin/flood-agent/ {
 
 #==================== Redirects for the Crop Map (part of the UK Digital Twin) ====================
 location = /digital-twin/land-use {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 # Main entry point for visualisation
@@ -145,7 +145,7 @@ location /digital-twin/land-use/ {
 
 #==================== Redirects for the Flood Map (part of the UK Digital Twin) ====================
 location = /digital-twin/flood-map {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 # Main entry point for visualisation
@@ -160,7 +160,7 @@ location /digital-twin/flood-map/ {
 
 #================================ Redirects for the STDC Agent =================================
 location = /stdc-agent {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 location /stdc-agent/ {
@@ -178,7 +178,7 @@ location /stdc-agent/ {
 
 #================================ Redirects for the Weather Agent =================================
 location = /weather-agent {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 location /weather-agent/ {
@@ -196,7 +196,7 @@ location /weather-agent/ {
 
 #==================================== Redirects for BlazeGraph ====================================
 location = /blazegraph {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 location /blazegraph/ {
@@ -210,7 +210,7 @@ location /blazegraph/ {
 
 #================================== Redirects for BlazeGraph geo ==================================
 location = /blazegraph_geo {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 
 location /blazegraph_geo/ {
@@ -225,7 +225,7 @@ location /blazegraph_geo/ {
 #====================================== Redirects for RDF4J =======================================
 # RDF4J server
 location = /rdf4j-server {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 location /rdf4j-server/ {
     proxy_pass        http://db_rdf4j/rdf4j-server/;
@@ -238,7 +238,7 @@ location /rdf4j-server/ {
 
 # RDF4J workbench
 location = /rdf4j-workbench {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 location /rdf4j-workbench/ {
     proxy_pass        http://db_rdf4j/rdf4j-workbench/;
@@ -251,8 +251,8 @@ location /rdf4j-workbench/ {
 
 
 #======================== Redirects requiring authentication =========================
-location /credo/visualisation {
-    return 302 /credo/visualisation/;
+location = /credo/visualisation {
+    return 301 $scheme://$http_host$uri/;
 }
 location /credo/visualisation/ {
     auth_basic                  "CReDo Visualisation";
@@ -267,7 +267,7 @@ location /credo/visualisation/ {
 }
 
 location = /geoserver {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 location /geoserver/ {
     proxy_pass          http://local_credo-geoserver/geoserver/;
@@ -293,7 +293,7 @@ location /geoserver/rest/ {
 #======================== Redirects for other stuff (only for developers) =========================
 # Folder containing CSVs on visitor stats
 location = /dev/stats {
-    return 302 /stats/;
+    return 301 /stats/;
 }
 
 location /dev/stats/ {
@@ -302,7 +302,7 @@ location /dev/stats/ {
 
 # Redirects for the EmailAgent service
 location = /agent/email {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 location /agent/email/ {
     proxy_pass        http://agent_email/email_agent/;
@@ -315,7 +315,7 @@ location /agent/email/ {
 
 # Redirects for the StatusAgent service
 location = /agent/status {
-    return 302 $scheme://$http_host$uri/;
+    return 301 $scheme://$http_host$uri/;
 }
 location /agent/status/ {
     proxy_pass        http://agent_status/status_agent/;
